add Checklist doc and emailer change

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,9 +19,9 @@ development:
   adapter: mysql
   database: nrdpfc_development
   username: root
-  password: james
-  host: localhost
-
+  password: nrdpfc!@#$
+  host: 127.0.0.1
+  
 staging:
   adapter: mysql
   database: nrdpfc_staging
@@ -33,5 +33,5 @@ production:
   adapter: mysql
   database: nrdpfc_production
   username: root
-  password: james
+  password: nrdpfc!@#$
   host: 127.0.0.1
